<resources>
    <string name="app_name">The Garden</string>
    <string name="search">Search</string>

    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>

    <string name="activity_plant_name">List of plants</string>

    <string name="garden_1">Garden One</string>
    <string name="add_new_garden">Add New Garden</string>
    <string name="content_description_select_garden">Select Garden</string>

    <string name="nutrients">Nutrients</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <string name="garden_dialog_text">Enter garden name</string>

    <string name="header_nav_bar_garden_name">The Garden</string>
    <string name="header_nav_bar_temp_humd">T: %1$s ºC&#160;&#160;&#160;H: %2$s%%</string>
    <string name="header_nav_bar_number_of_plants">Plants: %1$s</string>

    <string name="garden_has_plant">The garden has plants. Remove first the plants</string>
    <string name="garden_add_one">Create a garden please!</string>
    <string name="garden_exits">The garden\'s name already exists. Try other please!</string>

    <string name="permission_denied">Permission Denied</string>

    <!-- Notifications -->
    <string name="notification_title">The Garden</string>
    <string name="notification_text">The plants need water!</string>

    <string name="there_is_not_internet_connection">Internet Connection is not available.</string>
    <string name="header_nav_garden_picture">Garden Picture</string>

    <string-array name="garden_view_pager_fragment_title">
        <item>Plants</item>
        <item>Irrigations</item>
        <item>Charts</item>
    </string-array>

    <string name="create_one_garden">Create one garden to start &#8230;</string>

    <string name="create_email">Creating document  &#8230;</string>

    <!-- Login & Register -->
    <string name="loading_gardens">Loadging gardens  &#8230;</string>
    <string name="creating_account">Creating Account  &#8230;</string>
    <string name="email_not_valid">Enter a valid email address</string>
    <string name="check_email_characters">Between 4 and 10 alphanumeric characters accepted</string>
    <string name="login_failed">Login Failed!</string>
    <string name="login_ok">OK</string>

    <string name="login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_not_register_yet">No account yet? Create one</string>

    <string name="register_already_a_member">Already a member? Login</string>
    <string name="register_create_account">Create Account</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>

    <string name="custom_button_tag_left">&lt;</string>
    <string name="custom_button_tag_right">&gt;</string>
    <string name="custom_button_text_example">Relaxing</string>

    <!-- Toolbar Titles -->
    <string name="toolbar_title_main_data">Main Data</string>
    <string name="toolbar_title_nutrients">Nutrients</string>
    <string name="toolbar_title_irrigation_detail">Irrigation Detail</string>

    <!-- Plants - Main -->
    <string name="seedDate">Seed Date</string>
    <string name="flower">Flower</string>
    <string name="harvest">Harvest</string>

    <string name="edit_plant">Edit Plant</string>
    <string name="delete_plant">Delete Plant</string>

    <!-- Plant Creation -->

    <string name="activity_register">Register</string>
    <string name="activity_login">Login</string>

    <string name="activity_carousel">Carousel</string>
    <string name="activity_nutrients">Nutrients</string>
    <string name="activity_nutrient_detail">Nutrient Detail</string>
    <string name="activity_plant_data">Plant Info</string>

    <string name="activity_create_plant">Create a new plant</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>

    <string-array name="view_pager_fragment_title">
        <item>Main Data</item>
        <item>Photo Gallery</item>
        <item>Flavor Gallery</item>
        <item>Attributes</item>
        <item>Description</item>
    </string-array>

    <string name="name">Name</string>
    <string name="ph_soil">Ph Soil</string>
    <string name="ec_soil">Ec Soil</string>
    <string name="size">Size</string>

    <string name="flowering_time">Flowering Time</string>
    <string name="genotype">Genotype</string>
    <string name="height">Height</string>

    <string-array name="flowering_time_array">
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>4 weeks</item>
        <item>5 weeks</item>
        <item>6 weeks</item>
        <item>7 weeks</item>
        <item>8 weeks</item>
        <item>9 weeks</item>
        <item>10 weeks</item>
        <item>11 weeks</item>
        <item>12 weeks</item>
        <item>13 weeks</item>
        <item>14 weeks</item>
        <item>15 weeks</item>
    </string-array>

    <string name="select_image_source_tittle">Choose the source</string>

    <string-array name="image_source_array">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="ph_soil_default_value">6.5</string>
    <string name="ec_soil_default_value">0.4</string>
    <string name="size_default_value">10</string>

    <string name="user_canceled">User Cancelled</string>

    <string name="plant_name_validation_message_error">Please add a name to your plant!</string>

    <!-- Content Descriptions -->
    <string name="garden_image">Active Garden</string>
    <string name="settings_image">Settings</string>

    <string name="name_of_the_plant_already_exist">The name of plant already exits</string>

    <!-- Carousel -->
    <string name="text_image_slider">Slider Image</string>

    <!-- Attributes -->
    <string name="attributes_effects">Effects</string>
    <string name="attributes_medicinal">Medicinal</string>
    <string name="attributes_symptoms">Symptoms</string>

    <string name="attributes_selected_tags">Selected Tags</string>
    <string name="attributes_available_tags">Available Tags</string>

    <!-- Description -->
    <string name="plant_plagues">Plagues</string>
    <string name="plant_description">Description</string>
    <string name="plant_how_many">How many plants do you want to create?</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <!-- Cancel Button Dialog -->

    <!-- SHOW PLANT -->
    <string name="image_content_description">Plant Image</string>

    <string name="cancel_button_dialog_title">Cancel</string>
    <string name="cancel_button_dialog_content">Are you sure you want to cancel this %1$s?</string>
    <string name="cancel_button_creation">Creation</string>
    <string name="cancel_button_edition">Edition</string>

    <string name="plague_view_ph_default_text">6.3</string>
    <string name="plague_view_ec_default_text">0.4</string>
    <string name="plague_view_plant_high_default_text">30</string>
    <string name="plague_view_grow_date_default_text">10/9</string>

    <string name="tab_effects">Effects</string>
    <string name="tab_medicinal">Medicinal</string>
    <string name="tab_symptoms">Symptoms</string>

    <string name="effects">effects</string>
    <string name="medicinal">medicinal</string>
    <string name="symptoms">symptoms</string>

    <string name="show_plant_description_tittle">Description</string>
    <string name="show_plant_description_text">Salvia divinorum, es un planta herbácea perenne, de la familia de las lamiáceas, que es originaria de México donde se encuentra en Oaxaca en San José Tenango.</string>

    <!-- Delete Plant Dialog -->
    <string name="delete_plant_dialog_title">Delete Plant</string>
    <string name="delete_plant_dialog_content">Are you sure you want to delete this plant?</string>

    <!-- Share Plant Info -->
    <string name="share_plant_info">Share plant info</string>
    <string name="subject_email">The Garden: Plant info</string>

    <string name="email_plant_name">Plant Name: %1$s</string>

    <!-- NUTRIENTS-->

    <string name="nutrient_list_title">Nutrients</string>
    <string name="nutrient_detail_title">Nutrient Detail</string>

    <string name="nutrient_how_to_use">How to use</string>

    <string name="nutrient_name">Flora </string>
    <string name="nutrient_npk">NPK: %1$s</string>
    <string name="nutrient_ph">Ph: %1$s</string>

    <string name="name_of_the_nutrient_already_exist">The name of nutrient already exits</string>
    <string name="name_of_the_nutrient_is_empty">The name of nutrient is empty</string>

    <string name="nutrients_detail_ML">Nutrients (mL)</string>

    <!-- Delete Nutrient Dialog -->
    <string name="delete_nutrient_dialog_title">Delete Nutrient</string>
    <string name="delete_nutrient_dialog_content">Are you sure you want to delete this nutrient?</string>

    <!-- IRRIGATIONS-->

    <string name="activity_irrigation">Irrigation</string>
    <string name="activity_irrigation_detail">Irrigation Detail</string>

    <string name="irrigation_list_title">Irrigations</string>

    <string name="irrigation_date">Date</string>
    <string name="dose_water">Water: %1$s</string>
    <string name="dose_ph">Ph: %1$s</string>
    <string name="dose_ec">Ec: %1$s</string>
    <string name="dose_nutrients">N: %1$s</string>

    <string name="widget_irrigation_date">Date: %1$s</string>
    <string name="widget_irrigation_quantity">WPP: %1$s mL</string>

    <string name="irrigation_water">%1$s mL</string>

    <!-- Delete Irrigation Dialog -->
    <string name="delete_irrigation_dialog_title">Delete Irrigation</string>
    <string name="delete_irrigation_dialog_content">Are you sure you want to delete this irrigation?</string>

    <!-- Google Analytics -->

    <!-- categories -->
    <string name="category_login">Login</string>
    <string name="category_register">Register</string>

    <!-- actions -->
    <string name="action_logout">Logout</string>
    <string name="action_user_logged">User Logged</string>
    <string name="action_new_user_registered">Logout</string>

    <!-- Google AdMob -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- Image Content Description -->
    <string name="image_nutrients_content_description">Nutrient</string>
    <string name="image_ph_icon_content_description">Ph</string>
    <string name="image_ec_icon_content_description">Ec</string>
    <string name="image_plant_height_content_description">Plant Height</string>
    <string name="image_grow_date_content_description">Grow Date</string>
    <string name="image_ic_the_garden_content_description">The Garden</string>
    <string name="image_humidifier_content_description">Humidifier</string>
    <string name="image_ic_indicator_arrow_bottom_content_description">Arrow bottom</string>

    <!-- Widget -->
    <string name="on_enabled" translatable="false">Widget Provider enabled. Starting timer to update widget every minute</string>
    <string name="on_disabled" translatable="false">Widget Provider disabled. Turning off timer</string>
    <string name="irrigations_empty_widget">There is no irrigations</string>

</resources>
