<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/plague_view_margin_top"
    android:gravity="center">

    <ImageView
        android:id="@+id/ph_image_id"
        android:layout_width="@dimen/plague_view_ph_image_size"
        android:layout_height="@dimen/plague_view_ph_image_size"
        android:src="@drawable/ph_icon"
        android:contentDescription="@string/image_ph_icon_content_description"/>

    <TextView
        android:id="@+id/ph_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plague_view_text_size"
        android:text="@string/plague_view_ph_default_text"
        android:layout_marginTop="@dimen/plague_view_ph_margin_top"/>

    <ImageView
        android:id="@+id/ec_image_id"
        android:layout_width="@dimen/plague_view_ec_image_size"
        android:layout_height="@dimen/plague_view_ec_image_size"
        android:layout_marginStart="@dimen/plague_view_ec_image_margin_start"
        android:layout_marginEnd="@dimen/plague_view_ec_image_margin_end"
        android:layout_marginTop="@dimen/plague_view_ec_image_margin_top"
        android:src="@drawable/ic_ec_icon"
        android:contentDescription="@string/image_ec_icon_content_description"/>

    <TextView
        android:id="@+id/ec_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plague_view_text_size"
        android:text="@string/plague_view_ec_default_text"
        android:layout_marginTop="@dimen/plague_view_ec_text_margin_top"/>

    <ImageView
        android:id="@+id/plant_height_image_id"
        android:layout_width="@dimen/plague_view_plant_high_image_size"
        android:layout_height="@dimen/plague_view_plant_high_image_size"
        android:src="@drawable/ic_plant_icon"
        android:layout_marginStart="@dimen/plague_view_plant_high_image_margin_start"
        android:contentDescription="@string/image_plant_height_content_description"/>

    <TextView
        android:id="@+id/plant_high_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plague_view_text_size"
        android:text="@string/plague_view_plant_high_default_text"
        android:layout_marginTop="@dimen/plague_view_plant_high_text_margin_top"/>

    <ImageView
        android:id="@+id/grow_date_image_id"
        android:layout_width="@dimen/plague_view_grow_date_image_size"
        android:layout_height="@dimen/plague_view_grow_date_image_size"
        android:src="@drawable/ic_calendar_icon"
        android:layout_marginStart="@dimen/plague_view_grow_date_image_margin_start"
        android:layout_marginTop="@dimen/plague_view_grow_date_image_margin_top"
        android:contentDescription="@string/image_grow_date_content_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/plague_view_text_size"
        android:text="@string/plague_view_grow_date_default_text"
        android:layout_marginTop="@dimen/plague_view_grow_date_text_margin_top"/>

</LinearLayout>