<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dose_irrigation_text_margin_Start"
            android:textSize="@dimen/dose_irrigation_text_size"
            android:text="@string/dose_water"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dose_irrigation_text_margin_Start"
            android:textSize="@dimen/dose_irrigation_text_size"
            android:text="@string/dose_ph"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dose_irrigation_text_margin_Start"
            android:textSize="@dimen/dose_irrigation_text_size"
            android:text="@string/dose_ec"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dose_list_of_nutrients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dose_irrigation_text_margin_Start"
        android:textSize="@dimen/dose_irrigation_text_size"
        android:layout_marginTop="@dimen/dose_list_of_nutrients_margin_top"
        android:text="@string/dose_nutrients"/>

</LinearLayout>