<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_header_view_height"
        android:src="@drawable/ic_gardening"
        android:scaleType="centerCrop"
        android:background="@drawable/scrim_gradient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_nav_bar_garden_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_nav_bar_temp_humd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_nav_bar_number_of_plants"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</FrameLayout>