<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/back_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/login_padding_top"
        android:paddingStart="@dimen/login_padding_left"
        android:paddingEnd="@dimen/login_padding_right"
        android:weightSum="1">

        <ImageView android:src="@drawable/ic_the_garden"
            android:layout_width="@dimen/login_padding_logo_width"
            android:layout_height="@dimen/login_padding_logo_height"
            android:layout_marginBottom="@dimen/login_padding_logo_margin_bottom"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.37" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_input_margin"
            android:layout_marginBottom="@dimen/login_input_margin">
            <EditText android:id="@+id/login_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_input_margin"
            android:layout_marginBottom="@dimen/login_input_margin">
            <EditText android:id="@+id/login_password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_button_margin"
            android:layout_marginBottom="@dimen/login_button_margin"
            android:padding="12dp"
            android:text="@string/login"/>

        <TextView android:id="@+id/signup_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_button_margin"
            android:text="@string/login_not_register_yet"
            android:gravity="center"
            android:textSize="@dimen/login_signup_text_size"/>

    </LinearLayout>
</ScrollView>